--- a/vues/pagecreationcompte/PageCreationCompte.ui
+++ b/vues/pagecreationcompte/PageCreationCompte.ui
@@ -63,7 +63,7 @@
    <item row="7" column="0">
     <widget class="QLabel" name="label_7">
      <property name="text">
-      <string>Adress e-mail</string>
+      <string>Confirmation Adresse e-mail :</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
