--- a/screen/fenetreprincipale/FenetrePrincipale.ui
+++ b/screen/fenetreprincipale/FenetrePrincipale.ui
@@ -1,7 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>FenetrePrincipale</class>
  <widget class="QWidget" name="FenetrePrincipale">
   <property name="geometry">
@@ -13,9 +11,9 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>ShareCount</string>
   </property>
  </widget>
- <pixmapfunction/>
+ <resources/>
  <connections/>
 </ui>
