Affichage page création groupe après clique sur le bouton créer un groupe

--- a/vues/vuelistegroupe/VueListeGroupe.ui
+++ b/vues/vuelistegroupe/VueListeGroupe.ui
@@ -21,7 +21,7 @@
     <item alignment="Qt::AlignHCenter">
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>TextLabel</string>
+       <string>Mes groupes</string>
       </property>
      </widget>
     </item>
@@ -29,9 +29,9 @@
      <widget class="QTreeView" name="treeView"/>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="creerGroupeButton">
       <property name="text">
-       <string>PushButton</string>
+       <string>Créer un groupe</string>
       </property>
      </widget>
     </item>
