--- a/vues/vuelistegroupe/VueListeGroupe.ui
+++ b/vues/vuelistegroupe/VueListeGroupe.ui
@@ -26,7 +26,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QTreeView" name="treeView"/>
+     <widget class="QListView" name="listView"/>
     </item>
     <item>
      <widget class="QPushButton" name="creerGroupeButton">
