--- a/vues/pagegestiondebudget/pagegestiondebudget.ui
+++ b/vues/pagegestiondebudget/pagegestiondebudget.ui
@@ -42,7 +42,7 @@
     <widget class="QListView" name="depenseListView"/>
    </item>
    <item row="3" column="0">
-    <widget class="QListView" name="listView"/>
+    <widget class="QListView" name="participantsLisetView"/>
    </item>
    <item row="2" column="1">
     <widget class="QPushButton" name="ajouterDepenseButton">
@@ -52,7 +52,7 @@
     </widget>
    </item>
    <item row="2" column="0">
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="ajouterParticipantButton">
      <property name="text">
       <string>Ajouter un participant</string>
      </property>
